# freight-management-system

./: CMakeLists.txt  README.md  freight.hpp  perishable.hpp  shipment.hpp
backend/: hazardous.hpp  main.cpp  nonperishable.hpp
frontend/: app.js  index.html  style.css
